--- a/pdf/Project-1---Black-Jack (5).html
+++ b/pdf/Project-1---Black-Jack (5).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 
 <html>
 
@@ -452,48 +452,48 @@ kable(head(dealer))</code></pre>
 <table>
 <thead>
   <tr class="header">
-    <th align="right">Game</th>
-    <th align="left">Card</th>
-    <th align="left">Card_Type</th>
-    <th align="left">Value</th>
+    <th align="center">Game</th>
+    <th align="center">Card</th>
+    <th align="center">Card_Type</th>
+    <th align="center">Value</th>
   </tr>
   </thead>
   <tbody>
   <tr class="odd">
-    <td align="right">1</td>
-    <td align="left">C1</td>
-    <td align="left">8</td>
-    <td align="left">8</td>
+    <td align="center">1</td>
+    <td align="center">C1</td>
+    <td align="center">8</td>
+    <td align="center">8</td>
   </tr>
   <tr class="even">
-    <td align="right">1</td>
-    <td align="left">C2</td>
-    <td align="left">3</td>
-    <td align="left">3</td>
+    <td align="center">1</td>
+    <td align="center">C2</td>
+    <td align="center">3</td>
+    <td align="center">3</td>
   </tr>
   <tr class="odd">
-    <td align="right">1</td>
-    <td align="left">C3</td>
-    <td align="left">0</td>
-    <td align="left">0</td>
+    <td align="center">1</td>
+    <td align="center">C3</td>
+    <td align="center">0</td>
+    <td align="center">0</td>
   </tr>
   <tr class="even">
-    <td align="right">1</td>
-    <td align="left">C4</td>
-    <td align="left">0</td>
-    <td align="left">0</td>
+    <td align="center">1</td>
+    <td align="center">C4</td>
+    <td align="center">0</td>
+    <td align="center">0</td>
   </tr>
   <tr class="odd">
-    <td align="right">1</td>
-    <td align="left">C5</td>
-    <td align="left">0</td>
-    <td align="left">0</td>
+    <td align="center">1</td>
+    <td align="center">C5</td>
+    <td align="center">0</td>
+    <td align="center">0</td>
   </tr>
     <tr class="even">
-    <td align="right">1</td>
-    <td align="left">C6</td>
-    <td align="left">0</td>
-    <td align="left">0</td>
+    <td align="center">1</td>
+    <td align="center">C6</td>
+    <td align="center">0</td>
+    <td align="center">0</td>
   </tr>
 </tbody>
 </table>
