--- a/pdf/Project-1---Black-Jack (5).html
+++ b/pdf/Project-1---Black-Jack (5).html
@@ -575,38 +575,38 @@ kable(head(df))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">11</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C2</td>
+<td align="center">1</td>
+<td align="center">C2</td>
 <td align="left">6</td>
 <td align="left">6</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C3</td>
+<td align="center">1</td>
+<td align="center">C3</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C4</td>
+<td align="center">1</td>
+<td align="center">C4</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C5</td>
+<td align="center">1</td>
+<td align="center">C5</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C6</td>
+<td align="center">1</td>
+<td align="center">C6</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
@@ -709,38 +709,38 @@ kable(head(dealer_hit))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">8</td>
 <td align="left">8</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C2</td>
+<td align="center">1</td>
+<td align="center">C2</td>
 <td align="left">3</td>
 <td align="left">3</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C3</td>
+<td align="center">1</td>
+<td align="center">C3</td>
 <td align="left">3</td>
 <td align="left">3</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C4</td>
+<td align="center">1</td>
+<td align="center">C4</td>
 <td align="left">Jack</td>
 <td align="left">10</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C5</td>
+<td align="center">1</td>
+<td align="center">C5</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C6</td>
+<td align="center">1</td>
+<td align="center">C6</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
