--- a/pdf/Project-1---Black-Jack (5).html
+++ b/pdf/Project-1---Black-Jack (5).html
@@ -452,48 +452,48 @@ kable(head(dealer))</code></pre>
 <table border = "4">
 <thead>
   <tr class="header">
-    <th align="center">Game</th>
-    <th align="center">Card</th>
-    <th align="center">Card_Type</th>
-    <th align="center">Value</th>
+    <th>Game</th>
+    <th>Card</th>
+    <th>Card_Type</th>
+    <th>Value</th>
   </tr>
   </thead>
   <tbody>
   <tr class="odd">
-    <td align="center">1</td>
-    <td align="center">C1</td>
-    <td align="center">8</td>
-    <td align="center">8</td>
+    <td>1</td>
+    <td>C1</td>
+    <td>8</td>
+    <td>8</td>
   </tr>
   <tr class="even">
-    <td align="center">1</td>
-    <td align="center">C2</td>
-    <td align="center">3</td>
-    <td align="center">3</td>
+    <td>1</td>
+    <td>C2</td>
+    <td>3</td>
+    <td>3</td>
   </tr>
   <tr class="odd">
-    <td align="center">1</td>
-    <td align="center">C3</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td>1</td>
+    <td>C3</td>
+    <td>0</td>
+    <td>0</td>
   </tr>
   <tr class="even">
-    <td align="center">1</td>
-    <td align="center">C4</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td>1</td>
+    <td>C4</td>
+    <td>0</td>
+    <td>0</td>
   </tr>
   <tr class="odd">
-    <td align="center">1</td>
-    <td align="center">C5</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td>1</td>
+    <td>C5</td>
+    <td>0</td>
+    <td>0</td>
   </tr>
     <tr class="even">
-    <td align="center">1</td>
-    <td align="center">C6</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td>1</td>
+    <td>C6</td>
+    <td>0</td>
+    <td>0</td>
   </tr>
 </tbody>
 </table>
