--- a/pdf/Project-1---Black-Jack (5).html
+++ b/pdf/Project-1---Black-Jack (5).html
@@ -810,38 +810,38 @@ kable(head(player_hit))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">11</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C2</td>
+<td align="center">1</td>
+<td align="center">C2</td>
 <td align="left">6</td>
 <td align="left">6</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C3</td>
+<td align="center">1</td>
+<td align="center">C3</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C4</td>
+<td align="center">1</td>
+<td align="center">C4</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C5</td>
+<td align="center">1</td>
+<td align="center">C5</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C6</td>
+<td align="center">1</td>
+<td align="center">C6</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
@@ -867,7 +867,7 @@ kable(head(Results))</code></pre>
 <td align="right">1</td>
 <td align="right">17</td>
 <td align="right">24</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -875,7 +875,7 @@ kable(head(Results))</code></pre>
 <td align="right">2</td>
 <td align="right">21</td>
 <td align="right">21</td>
-<td align="left">Tie</td>
+<td align="center">Tie</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
@@ -883,7 +883,7 @@ kable(head(Results))</code></pre>
 <td align="right">3</td>
 <td align="right">16</td>
 <td align="right">23</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -891,7 +891,7 @@ kable(head(Results))</code></pre>
 <td align="right">4</td>
 <td align="right">20</td>
 <td align="right">21</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -899,7 +899,7 @@ kable(head(Results))</code></pre>
 <td align="right">5</td>
 <td align="right">16</td>
 <td align="right">20</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -907,7 +907,7 @@ kable(head(Results))</code></pre>
 <td align="right">6</td>
 <td align="right">19</td>
 <td align="right">17</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -971,38 +971,38 @@ kable(head(shown_card))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">8</td>
 <td align="left">8</td>
 </tr>
 <tr class="even">
-<td align="right">2</td>
-<td align="left">C1</td>
+<td align="center">2</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">11</td>
 </tr>
 <tr class="odd">
-<td align="right">3</td>
-<td align="left">C1</td>
+<td align="center">3</td>
+<td align="center">C1</td>
 <td align="left">Jack</td>
 <td align="left">10</td>
 </tr>
 <tr class="even">
-<td align="right">4</td>
-<td align="left">C1</td>
+<td align="center">4</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">11</td>
 </tr>
 <tr class="odd">
-<td align="right">5</td>
-<td align="left">C1</td>
+<td align="center">5</td>
+<td align="center">C1</td>
 <td align="left">Jack</td>
 <td align="left">10</td>
 </tr>
 <tr class="even">
-<td align="right">6</td>
-<td align="left">C1</td>
+<td align="center">6</td>
+<td align="center">C1</td>
 <td align="left">8</td>
 <td align="left">8</td>
 </tr>
@@ -1032,38 +1032,38 @@ kable(head(player_hit_shown))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">1</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C2</td>
+<td align="center">1</td>
+<td align="center">C2</td>
 <td align="left">6</td>
 <td align="left">6</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C3</td>
+<td align="center">1</td>
+<td align="center">C3</td>
 <td align="left">Jack</td>
 <td align="left">10</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C4</td>
+<td align="center">1</td>
+<td align="center">C4</td>
 <td align="left">Ace</td>
 <td align="left">1</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C5</td>
+<td align="center">1</td>
+<td align="center">C5</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C6</td>
+<td align="center">1</td>
+<td align="center">C6</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
@@ -1090,7 +1090,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">1</td>
 <td align="right">18</td>
 <td align="right">24</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -1098,7 +1098,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">2</td>
 <td align="right">21</td>
 <td align="right">21</td>
-<td align="left">Tie</td>
+<td align="center">Tie</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
@@ -1106,7 +1106,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">3</td>
 <td align="right">29</td>
 <td align="right">23</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -1114,7 +1114,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">4</td>
 <td align="right">21</td>
 <td align="right">21</td>
-<td align="left">Tie</td>
+<td align="center">Tie</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
@@ -1122,7 +1122,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">5</td>
 <td align="right">24</td>
 <td align="right">20</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -1130,7 +1130,7 @@ kable(head(Results_2))</code></pre>
 <td align="right">6</td>
 <td align="right">19</td>
 <td align="right">17</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -1210,38 +1210,38 @@ kable(head(player_hit_shown_2))</code></pre>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C1</td>
+<td align="center">1</td>
+<td align="center">C1</td>
 <td align="left">Ace</td>
 <td align="left">1</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C2</td>
+<td align="center">1</td>
+<td align="center">C2</td>
 <td align="left">6</td>
 <td align="left">6</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C3</td>
+<td align="center">1</td>
+<td align="center">C3</td>
 <td align="left">10</td>
 <td align="left">10</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C4</td>
+<td align="center">1</td>
+<td align="center">C4</td>
 <td align="left">8</td>
 <td align="left">8</td>
 </tr>
 <tr class="odd">
-<td align="right">1</td>
-<td align="left">C5</td>
+<td align="center">1</td>
+<td align="center">C5</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
 <tr class="even">
-<td align="right">1</td>
-<td align="left">C6</td>
+<td align="center">1</td>
+<td align="center">C6</td>
 <td align="left">0</td>
 <td align="left">0</td>
 </tr>
@@ -1268,7 +1268,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">1</td>
 <td align="right">25</td>
 <td align="right">24</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -1276,7 +1276,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">2</td>
 <td align="right">21</td>
 <td align="right">21</td>
-<td align="left">Tie</td>
+<td align="center">Tie</td>
 <td align="right">0</td>
 <td align="right">1</td>
 </tr>
@@ -1284,7 +1284,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">3</td>
 <td align="right">21</td>
 <td align="right">23</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
@@ -1292,7 +1292,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">4</td>
 <td align="right">20</td>
 <td align="right">21</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -1300,7 +1300,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">5</td>
 <td align="right">22</td>
 <td align="right">20</td>
-<td align="left">Dealer</td>
+<td align="center">Dealer</td>
 <td align="right">0</td>
 <td align="right">0</td>
 </tr>
@@ -1308,7 +1308,7 @@ kable(head(Results_3))</code></pre>
 <td align="right">6</td>
 <td align="right">19</td>
 <td align="right">17</td>
-<td align="left">Player</td>
+<td align="center">Player</td>
 <td align="right">1</td>
 <td align="right">0</td>
 </tr>
