--- a/pdf/Project-1---Black-Jack (5).html
+++ b/pdf/Project-1---Black-Jack (5).html
@@ -462,38 +462,38 @@ kable(head(dealer))</code></pre>
   <tr class="odd">
     <td align="center">1</td>
     <td align="center">C1</td>
-    <td align="center">8</td>
-    <td align="center">8</td>
+    <td align="right">8</td>
+    <td align="right">8</td>
   </tr>
   <tr class="even">
     <td align="center">1</td>
     <td align="center">C2</td>
-    <td align="center">3</td>
-    <td align="center">3</td>
+    <td align="right">3</td>
+    <td align="right">3</td>
   </tr>
   <tr class="odd">
     <td align="center">1</td>
     <td align="center">C3</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
   </tr>
   <tr class="even">
     <td align="center">1</td>
     <td align="center">C4</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
   </tr>
   <tr class="odd">
     <td align="center">1</td>
     <td align="center">C5</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
   </tr>
     <tr class="even">
     <td align="center">1</td>
     <td align="center">C6</td>
-    <td align="center">0</td>
-    <td align="center">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
   </tr>
 </tbody>
 </table>
@@ -577,38 +577,38 @@ kable(head(df))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">11</td>
+<td align="right">Ace</td>
+<td align="right">11</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C2</td>
-<td align="left">6</td>
-<td align="left">6</td>
+<td align="right">6</td>
+<td align="right">6</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C3</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C4</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C5</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C6</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 </tbody>
 </table>
@@ -711,38 +711,38 @@ kable(head(dealer_hit))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">8</td>
-<td align="left">8</td>
+<td align="right">8</td>
+<td align="right">8</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C2</td>
-<td align="left">3</td>
-<td align="left">3</td>
+<td align="right">3</td>
+<td align="right">3</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C3</td>
-<td align="left">3</td>
-<td align="left">3</td>
+<td align="right">3</td>
+<td align="right">3</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C4</td>
-<td align="left">Jack</td>
-<td align="left">10</td>
+<td align="right">Jack</td>
+<td align="right">10</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C5</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C6</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 </tbody>
 </table>
@@ -812,38 +812,38 @@ kable(head(player_hit))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">11</td>
+<td align="right">Ace</td>
+<td align="right">11</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C2</td>
-<td align="left">6</td>
-<td align="left">6</td>
+<td align="right">6</td>
+<td align="right">6</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C3</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C4</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C5</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C6</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 </tbody>
 </table>
@@ -973,38 +973,38 @@ kable(head(shown_card))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">8</td>
-<td align="left">8</td>
+<td align="right">8</td>
+<td align="right">8</td>
 </tr>
 <tr class="even">
 <td align="center">2</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">11</td>
+<td align="right">Ace</td>
+<td align="right">11</td>
 </tr>
 <tr class="odd">
 <td align="center">3</td>
 <td align="center">C1</td>
-<td align="left">Jack</td>
-<td align="left">10</td>
+<td align="right">Jack</td>
+<td align="right">10</td>
 </tr>
 <tr class="even">
 <td align="center">4</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">11</td>
+<td align="right">Ace</td>
+<td align="right">11</td>
 </tr>
 <tr class="odd">
 <td align="center">5</td>
 <td align="center">C1</td>
-<td align="left">Jack</td>
-<td align="left">10</td>
+<td align="right">Jack</td>
+<td align="right">10</td>
 </tr>
 <tr class="even">
 <td align="center">6</td>
 <td align="center">C1</td>
-<td align="left">8</td>
-<td align="left">8</td>
+<td align="right">8</td>
+<td align="right">8</td>
 </tr>
 </tbody>
 </table>
@@ -1034,38 +1034,38 @@ kable(head(player_hit_shown))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">1</td>
+<td align="right">Ace</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C2</td>
-<td align="left">6</td>
-<td align="left">6</td>
+<td align="right">6</td>
+<td align="right">6</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C3</td>
-<td align="left">Jack</td>
-<td align="left">10</td>
+<td align="right">Jack</td>
+<td align="right">10</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C4</td>
-<td align="left">Ace</td>
-<td align="left">1</td>
+<td align="right">Ace</td>
+<td align="right">1</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C5</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C6</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 </tbody>
 </table>
@@ -1212,38 +1212,38 @@ kable(head(player_hit_shown_2))</code></pre>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C1</td>
-<td align="left">Ace</td>
-<td align="left">1</td>
+<td align="right">Ace</td>
+<td align="right">1</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C2</td>
-<td align="left">6</td>
-<td align="left">6</td>
+<td align="right">6</td>
+<td align="right">6</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C3</td>
-<td align="left">10</td>
-<td align="left">10</td>
+<td align="right">10</td>
+<td align="right">10</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C4</td>
-<td align="left">8</td>
-<td align="left">8</td>
+<td align="right">8</td>
+<td align="right">8</td>
 </tr>
 <tr class="odd">
 <td align="center">1</td>
 <td align="center">C5</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 <tr class="even">
 <td align="center">1</td>
 <td align="center">C6</td>
-<td align="left">0</td>
-<td align="left">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
 </tr>
 </tbody>
 </table>
