--- a/pdf/Problem-7 (6).html
+++ b/pdf/Problem-7 (6).html
@@ -400,7 +400,7 @@ t4 &lt;- violet[1:5,c(&#39;instnm&#39;,&#39;stabbr&#39;,&#39;city&#39;,&#39;act_
                    &#39;md_earn_wne_p6&#39;, &#39;npt&#39;, &#39;omawdp8_ftft&#39;,&#39;Composite&#39;)]
 
 kable(t4)</code></pre>
-<table>
+<table border = "3">
 <colgroup>
 <col width="37%" />
 <col width="4%" />
