--- a/pdf/Problem-7 (6).html
+++ b/pdf/Problem-7 (6).html
@@ -537,7 +537,7 @@ t5 &lt;- olivia[1:5,c(&#39;instnm&#39;,&#39;stabbr&#39;,&#39;city&#39;,&#39;act_
                   &#39;npt&#39;,&#39;coastal_cities&#39;,&#39;Composite&#39;)]
 
 kable(t5)</code></pre>
-<table>
+<table border = "3">
 <colgroup>
 <col width="27%" />
 <col width="6%" />
@@ -673,7 +673,7 @@ t3 &lt;- larry[1:5,c(&#39;instnm&#39;,&#39;stabbr&#39;,&#39;city&#39;,&#39;act_a
                   &#39;distance_home&#39;,&#39;omawdp8_ftft&#39;,&#39;ugds&#39;,&#39;Composite&#39;)]
 
 kable(t3)</code></pre>
-<table>
+<table border = "3">
 <colgroup>
 <col width="26%" />
 <col width="5%" />
