--- a/pdf/Problem-8 (1).html
+++ b/pdf/Problem-8 (1).html
@@ -462,7 +462,7 @@ df &lt;- df %&gt;% add_predictions(m) %&gt;% add_residuals(m)
 df &lt;- df[order(-df$resid),]
 df_1 &lt;- df[1:10,]
 kable(df_1)</code></pre>
-<table style="width:100%;">
+<table border="3" style="width:100%;">
 <colgroup>
 <col width="1%" />
 <col width="2%" />
@@ -777,7 +777,7 @@ prediction model?</strong></p>
 df &lt;- df[order(df$resid),]
 df_2 &lt;- df[1:10,]
 kable(df_2)</code></pre>
-<table style="width:100%;">
+<table border="3" style="width:100%;">
 <colgroup>
 <col width="1%" />
 <col width="2%" />
